force-app/main/default/objects/WorkOrderLineItem/fields/BRL__c.field-meta.xml
<CustomField>
    <fullName>BRL__c</fullName>
    <inlineHelpText>R$</inlineHelpText>
    <label>Price BRL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>