force-app/main/default/objects/WorkOrderLineItem/fields/BRLUpdate__c.field-meta.xml
<CustomField>
    <fullName>BRLUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRL Update</label>
    <type>Checkbox</type>
</CustomField>