force-app/main/default/objects/WorkOrderLineItem/fields/ISSWO__c.field-meta.xml
<CustomField>
    <fullName>ISSWO__c</fullName>
    <formula>WorkOrder.ISS__c</formula>
    <label>ISS WO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>