force-app/main/default/objects/WorkOrderLineItem/fields/MarkUpWO__c.field-meta.xml
<CustomField>
    <fullName>MarkUpWO__c</fullName>
    <formula>WorkOrder.MarkUp__c</formula>
    <label>MarkUp WO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>