force-app/main/default/objects/WorkOrderLineItem/fields/MdB__c.field-meta.xml
<CustomField>
    <fullName>MdB__c</fullName>
    <label>MdB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>