force-app/main/default/objects/WorkOrderLineItem/fields/MII__c.field-meta.xml
<CustomField>
    <fullName>MII__c</fullName>
    <label>MII</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>