force-app/main/default/objects/WorkOrderLineItem/fields/MS__c.field-meta.xml
<CustomField>
    <fullName>MS__c</fullName>
    <label>M/S</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>F</fullName>
                <isActive>false</isActive>
                <label>F</label>
            </value>
            <value>
                <fullName>I</fullName>
                <isActive>false</isActive>
                <label>I</label>
            </value>
            <value>
                <fullName>M/S</fullName>
                <isActive>false</isActive>
                <label>M/S</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>