force-app/main/default/objects/WorkOrderLineItem/fields/NAM__c.field-meta.xml
<CustomField>
    <fullName>NAM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NAM</label>
    <referenceTo>NAM__c</referenceTo>
    <relationshipLabel>Work Order Line Items</relationshipLabel>
    <relationshipName>WorkOrderLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>