force-app/main/default/objects/WorkOrderLineItem/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <label>Responsible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MII</fullName>
            </value>
            <value>
                <fullName>MdB</fullName>
            </value>
            <value>
                <fullName>MINC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>