force-app/main/default/objects/WorkOrderLineItem/fields/ResponsibleCountry__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleCountry__c</fullName>
    <label>Responsible</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Outside of Brazil</fullName>
            </value>
            <value>
                <fullName>MODEC, Inc</fullName>
                <isActive>false</isActive>
                <label>MODEC, Inc</label>
            </value>
            <value>
                <fullName>MdB</fullName>
                <isActive>false</isActive>
                <label>MdB</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>