force-app/main/default/objects/WorkOrderLineItem/fields/ResponsibleWO__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleWO__c</fullName>
    <formula>WorkOrder.Contractor__r.ShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Responsible WO</label>
    <type>Text</type>
</CustomField>