force-app/main/default/objects/WorkOrderLineItem/fields/TaxISS__c.field-meta.xml
<CustomField>
    <fullName>TaxISS__c</fullName>
    <formula>IF(
				ISPICKVAL(ResponsibleCountry__c, &apos;Brazil&apos;),
				(Price__c + MarkUpWO__c*Price__c)/0.98*ISSWO__c,
				0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax (ISS 2%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>