force-app/main/default/objects/WorkOrderLineItem/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <formula>HYPERLINK(WorkOrder.Id, WorkOrder.WorkOrder__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WorkOrder</label>
    <type>Text</type>
</CustomField>